@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix speed logic, implementing feature request #1624544: Armour speed limit
+ common/living.c
+Fix missing call, resulting in corrupted output.
+ server/c_object.c
 Fix mishandling of weapon/shield/armour restriction. Fix crash with NULL value.
  server/gods.c
 Ryo 2007-02-11
